# client

./: .editorconfig  .env  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .prettierrc.js  .prettierrc.json  App.tsx  README.md  TODO  app.js  app.json  babel.config.js  craco.config.js  crowdin.yml  eas.json  flake.nix  flake.template.nix  global.d.ts  index.android.js  index.html  index.js  index.linux.js  index.web.js  metro.config.js  msbuild.binlog  nix-rebuild-flake.sh  package-lock.json  package.json  pnpm-lock.yaml  react-native.config.js  shim.js  styles.web.js  tailwind.config.js  tsconfig.json  types.tsx  vite.config.ts  (+1 more)
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: android.yml  build-android.yml  pages-deploy.yml  tauri.yaml  tauri.yml  windows.yml
__tests__/: App-test.tsx
android/: gradle.properties  link-assets-manifest.json  local.properties  settings.gradle
android/app/: BUCK  _BUCK  build.gradle  proguard-rules.pro
components/: ChannelHeader.tsx  ChannelSidebar.tsx  ChannelsSidebarMobile.tsx  ChatInput.tsx  ChatMessage.tsx  Container.tsx  Grid.tsx  GuildListGuild.tsx  GuildListGuildItem.tsx  GuildSidebarMobile.tsx  HCaptcha.tsx  MFAInput.tsx  MemberList.tsx  MembersListMobile.tsx  MessageList.tsx  Swiper.tsx
config/: webpack.config.js  webpackDevServer.config.js
constants/: Colors.ts  Globals.ts
contexts/: BottomTabBarProgressContext.tsx
docker/: Dockerfile  docker-compose.yaml
hooks/: useCachedResources.ts  useChannel.ts  useGuild.ts  useLogger.ts
interfaces/: Gateway.ts  IAPILogin.ts  api.ts  common.ts
ios/: Podfile  README.md
linux/: webpack.config.js
locales/: nl.json  ug.json
macos/: Podfile
navigation/: LinkingConfiguration.ts  index.tsx
notice/: index.html
patches/: @react-native-community+cli-platform-android+6.1.0.patch  css-to-react-native+3.0.0.patch  native-base+3.2.1.patch  react-native+0.70.5.patch  react-native-event-listeners+1.0.7.patch  react-native-haptic-feedback+1.13.0.patch  react-native-web+0.17.5.patch
public/: index.html  manifest.json  splashscreen.css  splashscreen.html  style.css
screens/: ChannelsScreen.tsx  LoginScreen.tsx  MobileRoot.tsx  ModalScreen.tsx  NotFoundScreen.tsx  RegisterScreen.tsx  RootScreen.tsx  TempSettingsScreen.tsx  ThemeOverview.tsx
scripts/: bundler.js  start.js  tauri-version.js
scripts2/: rn-transformer.js  theme.js
src/: App.css  App.tsx  Client.tsx  Drawer.tsx.disabled  Test.tsx  app.json  custom.d.ts  index.css  index.js  index.tsx  polyfills.js  react-app-env.d.ts  tailwind.config.js  types.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.windows.conf.json  version.json
src-tauri/capabilities/: base.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs  updater.rs
src/data/: Data.ts  (+3 more)
stores/: AccountStore.ts  BaseStore.ts  BaseStoreEventEmitter.ts  Channel.ts  ChannelStore.ts  ChannelsStore.ts  DomainStore.ts  GatewayStore.ts  Guild.ts  GuildMember.ts  GuildMemberListStore.ts  GuildMembersStore.ts  GuildStore.ts  GuildsStore.ts  Message.ts  MessageStore.ts  MessagesStore.ts  Role.ts  RolesStore.ts  User.ts  UserStore.ts  UsersStore.ts
utils/: BitField.ts  Endpoints.ts  Logger.ts  REST.ts  Snowflake.ts
web/: index.html  webpack.config.js
windows/: fosscord.sln  spacebar.sln  test.sln
(+708 files in other folders)
